# NA6PRoot

./: .gitignore  AGENTS.md  CMakeLists.txt  NA6PMC.C  NA6PRec.cxx  NA6PSim.cxx  README.md  init.sh.in  test.C  tst.sh
base/: CMakeLists.txt
base/include/: MagneticField.h  MagneticFieldRegion.h  NA6PBeam.h  NA6PBeamParam.h  NA6PGeometryManager.h  NA6PLayoutParam.h  NA6PMCComposedLabel.h  NA6PMCTruthContainer.h  NA6PRecoParam.h
base/src/: BaseLinkDef.h  MagneticField.cxx  MagneticFieldRegion.cxx  NA6PBeam.cxx  NA6PBeamParam.cxx  NA6PGeometryManager.cxx  NA6PLayoutParam.cxx  NA6PMCComposedLabel.cxx  NA6PMCTruthContainer.cxx  baseLinkDef.h
data/: MNP33_field_map.inp  README.md
dependencies/: CMakeLists.txt  Dependencies.cmake
rec/: CMakeLists.txt  README.md
rec/include/: ExtTrackPar.h  HelixHelper.h  NA6PBaseCluster.h  NA6PDCAFitterN.h  NA6PEventReader.h  NA6PFastTrackFitter.h  NA6PHelixHelper.h  NA6PLine.h  NA6PMatch.h  NA6PMatching.h  NA6PMuonSpecCluster.h  NA6PMuonSpecReconstruction.h  NA6PPhysConst.h  NA6PRecoParam.h  NA6PReconstruction.h  NA6PTrack.h  NA6PTrackPar.h  NA6PTrackParCov.h  NA6PTrackerCA.h  NA6PVerTelCluster.h  NA6PVerTelClusterizer.h  NA6PVerTelReconstruction.h  NA6PVertex.h  NA6PVertexerTracklets.h  NA6PVertexerTracks.h  PID.h  Propagator.h  Seeder.h
rec/src/: ExtTrackPar.cxx  NA6PBaseCluster.cxx  NA6PFastTrackFitter.cxx  NA6PLine.cxx  NA6PMatch.cxx  NA6PMatching.cxx  NA6PMuonSpecCluster.cxx  NA6PMuonSpecReconstruction.cxx  NA6PRecoParam.cxx  NA6PReconstruction.cxx  NA6PTrack.cxx  NA6PTrackPar.cxx  NA6PTrackParCov.cxx  NA6PTrackerCA.cxx  NA6PVerTelCluster.cxx  NA6PVerTelClusterizer.cxx  NA6PVerTelReconstruction.cxx  NA6PVertex.cxx  NA6PVertexerTracklets.cxx  NA6PVertexerTracks.cxx  PID.cxx  Propagator.cxx  Seeder.cxx  recLinkDef.h
recNative/: CMakeLists.txt
recNative/include/: NA6PCluster.h  NA6PTrackPar.h  NA6PTrackParCov.h
recNative/src/: NA6PCluster.cxx  NA6PTrackPar.cxx  NA6PTrackParCov.cxx  recNativeLinkDef.h
sim/: CMakeLists.txt  README.md
sim/include/: GenMUONLMR.h  NA6PAbsorber.h  NA6PBaseHit.h  NA6PCoolingPlate.h  NA6PDetector.h  NA6PDipoleIP.h  NA6PDipoleMS.h  NA6PDipoleVT.h  NA6PGenBox.h  NA6PGenCocktail.h  NA6PGenCutParam.h  NA6PGenHepMC.h  NA6PGenHisto.h  NA6PGenParam.h  NA6PGenerator.h  NA6PMC.h  NA6PMCEventHeader.h  NA6PMCGenHeader.h  NA6PMCStack.h  NA6PMagnetsGDML.h  NA6PModule.h  NA6PMuonSpec.h  NA6PMuonSpecHit.h  NA6PMuonSpecModular.h  NA6PMuonSpecModularHit.h  NA6PPixelStation.h  NA6PSimMisc.h  NA6PTGeoHelper.h  NA6PTarget.h  NA6PVerTel.h  NA6PVerTelDigit.h  NA6PVerTelDigitizer.h  NA6PVerTelHit.h  NA6PVerTelPreDigitContainer.h  NA6PVerTelSegmentation.h  NA6PVertexGenerator.h
sim/src/: GenMUONLMR.cxx  NA6PAbsorber.cxx  NA6PAbsorber.cxx.orig  NA6PBaseHit.cxx  NA6PCoolingPlate.cxx  NA6PDetector.cxx  NA6PDipoleIP.cxx  NA6PDipoleMS.cxx  NA6PDipoleVT.cxx  NA6PGenBox.cxx  NA6PGenCocktail.cxx  NA6PGenCutParam.cxx  NA6PGenHepMC.cxx  NA6PGenHisto.cxx  NA6PGenParam.cxx  NA6PGenerator.cxx  NA6PMC.cxx  NA6PMCEventHeader.cxx  NA6PMCGenHeader.cxx  NA6PMCStack.cxx  NA6PMagnetsGDML.cxx  NA6PModule.cxx  NA6PMuonSpec.cxx  NA6PMuonSpecModular.cxx  NA6PPixelStation.cxx  NA6PSimMisc.cxx  NA6PTGeoHelper.cxx  NA6PTarget.cxx  NA6PVerTel.cxx  NA6PVerTelDigit.cxx  NA6PVerTelDigitizer.cxx  NA6PVerTelSegmentation.cxx  SimLinkDef.h  simLinkDef.h
test/: CheckDecayVertices.C  checkDecayVertices.C  convert2ACTS.C  convertHitsToRecPoints.C  digitsToClusters.C  event_display_full.C  event_display_muons.C  genBgEvent.C  genDimuonBgEvent.C  genHEPMC.C  genOpenCharmBgEvent.C  genParamPi.C  genStrangenessBgEvent.C  genVirtualPhotonBgEvent.C  genbox.C  hitsToDigits.C  inspectVertexerTracklets.C  plotTracks.C  plotVerTelClusters.C  plotVerTelDigits.C  produceAOD.C  readEvent.C  runBatchMC.sh  runFastFitOnHits.C  runMSTrackFinderCA.C  runMSTrackMIDTrackletMatching.C  runMSTracking.C  runMatching.C  runPerfStudy.C  runSimHepMC.sh  runTrackFinderCA.C  runVTTrackFinderCA.C  runVTTracking.C  runVertexerTracklets.C  runVertexerTracks.C  testHooks.C  vtxInDump.C
test/embedding/: MergeHits_embed.C  embed.C  embed.sh
utils/: CMakeLists.txt
utils/include/: ConfigurableParam.h  ConfigurableParamHelper.h  ConfigurableParamReaders.h  HistoManager.h  KeyValParam.h  MiscUtils.h  NA6PTreeStream.h  NA6PTreeStreamRedirector.h  StringUtils.h
utils/src/: ConfigurableParam.cxx  ConfigurableParamHelper.cxx  ConfigurableParamReaders.cxx  HistoManager.cxx  KeyValParam.cxx  MiscUtils.cxx  NA6PTreeStream.cxx  NA6PTreeStreamRedirector.cxx  StringUtils.cxx  UtilsLinkDef.h  utilsLinkDef.h
varia/Pythia2HEPMC/: CMakeLists.txt  GenPYTHIA  GenPYTHIA.cxx  PbPb_MB.cmnd  compileGenPYTHIA.sh  jpsi_pp.cmnd  pp_MB.cmnd  runGenPYTHIA.sh
